# mawar

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  Makefile.in  README.md  config.xml  config.xml.example  configure  configure.in  mawar  mawar.sql  users.ini  xep-0199-ping  xep-0199-ping.php  xmppgroups.sql
contrib/: migrate.php
src/: adhoccommand.cpp  attagparser.cpp  command.cpp  configfile.cpp  dcbot.cpp  form.cpp  functions.cpp  geoip.cpp  jid.cpp  logs.cpp  main.cpp  myconsole.cpp  proxy.cpp  s2sinputstream.cpp  s2slistener.cpp  s2soutputstream.cpp  serverstatus.cpp  stanza.cpp  stanzabuffer.cpp  tagbuilder.cpp  taghelper.cpp  virtualhost.cpp  xep0114.cpp  xep0114listener.cpp  xml-parser.cpp  xml-tag.cpp  xml_tag.cpp  xmppclient.cpp  xmppdomain.cpp  xmppextension.cpp  xmppextensioninput.cpp  xmppextensionoutput.cpp  xmppgroups.cpp  xmppproxy.cpp  xmppproxystream.cpp  xmppserver.cpp  xmppserverinput.cpp  xmppserveroutput.cpp  xmppstream.cpp
src/include/: adhoccommand.h  attagparser.h  command.h  config.h.in  configfile.h  db.h  dcbot.h  defaults.h  form.h  functions.h  geoip.h  jid.h  logs.h  myconsole.h  presence.h  s2sinputstream.h  s2slistener.h  s2soutputstream.h  serverstatus.h  stanza.h  stanzabuffer.h  tagbuilder.h  taghelper.h  virtualhost.h  xep0114.h  xep0114listener.h  xml-parser.h  xml-tag.h  xml-types.h  xml_tag.h  xml_types.h  xmppclient.h  xmppdomain.h  xmppextension.h  xmppextensioninput.h  xmppextensionoutput.h  xmppgroups.h  xmppproxy.h  xmppproxystream.h  xmppserver.h  (+3 more)
src/tests/: test-01.cpp  test-02.cpp
update-db/: 01.s2s-spool.sql  02.roster-and-presence.sql  03.private-storage-denormalization.sql
